# Top_eleven

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_agent.py
assistant_coach/: README.md  agent.py  app.py  config.py  requirements.txt  tools.py
dashboard/: README.md  app.py
dashboard/assets/: brentford.css  dropdowns.css
data/: brentford_2021_2026.csv
notebook/: Brentford_analytics .ipynb
notebooks/: Brentford_analytics.ipynb
tests/: test_assistant_agent.py  test_nvidia_nim.py
